--- a/app.wxss
+++ b/app.wxss
@@ -2,77 +2,219 @@
 @import 'libs/weui.wxss';
 
 page{
-    background-color: #FFFFFF;
-    font-size: 28rpx;
-    font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+  background-color: #FFFFFF;
+  font-size: 28rpx;
+    /* font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif; */
 }
-.page__hd {
-    padding: 16rpx;
+.page__main {
+  padding-top: 6rpx;
 }
-.page__top {
+.page__sub {
+  padding-top: 10rpx;
+}
+.navigationBar {
   position: fixed;
-  padding-top: 0;
+  top:0;
+  z-index: 500;
+  width: 100%;
+  background-color: #F5F5F5;
+  border-bottom: 1rpx solid #CCCCCC;
+}
+.navigationBar__column {
+  position: relative;
+  margin-left: 20rpx;
+  white-space: nowrap;
+  font-size: 32rpx;
+  width: 540rpx;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+          align-items: center;
+}
+.navigationBar__icon {
+  margin-right: 10rpx;
+  vertical-align: middle;
+  width: 60rpx;
+  height: 60rpx;
+}
+.navigationBar__item {
+  position: relative;
+  width: 10em;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+          flex: 1;
+  padding: 6rpx 0;
   text-align: center;
 }
+.navigationBar__title {
+  display: inline-block;
+  font-size: 30rpx;
+  max-width: 10em;
+  width: auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+}
+.navigationBar__btn {
+  position: inline-block;
+  padding-left: 8rpx;
+  padding-right: 8rpx;
+  line-height: 46rpx;
+  font-size: 26rpx;
+  background-color:#FFFFFF;
+  border-radius: 60rpx;
+  border-color: #FFFFFF;
+  text-align: center;
+}
+.navSearchBar__form {
+  position: relative;
+  word-wrap: break-word;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  width: 480rpx;
+  border-radius: 30rpx;
+  background-color: #FFFFFF;
+  border: 1rpx solid #E6E6EA;
+}
+.navSearchBar__input {
+  height:1.4rem;
+  text-overflow:clip;
+  overflow:hidden;
+  white-space:nowrap;
+  width:400rpx;
+}
+.navigationBar__btn_icon {
+  position: inline-block;
+  margin-top: 0rpx;
+	margin-right: 10rpx;
+  padding: 0 0;
+  line-height: 46rpx;
+  width: 50rpx;
+  background-color:#FFFFFF;
+  border-color: #FFFFFF;
+  text-align: center;
+}
+.navigationBar__price {
+  display: inline-block;
+	color: #f60;
+  margin-top: 10rpx;
+	margin-left: 10rpx;
+  font-size: 34rpx;
+}
+
+.page__hd {
+  padding-top: 10rpx;
+}
 .page__bd {
-  padding-top: 30rpx;
   padding-bottom: 10rpx;
 }
 .page__bd_spacing {
-    padding-left: 16rpx;
-    padding-right: 16rpx;
-    padding-bottom: 60rpx;
+  padding-left: 16rpx;
+  padding-right: 16rpx;
 }
 .page__ac_spacing {
-    padding-left: 40rpx;
-    padding-right: 40rpx;
+  padding-left: 40rpx;
+  padding-right: 40rpx;
 }
-
 .page__ft{
-    padding-bottom: 10rpx;
-    text-align: center;
+  padding-bottom: 10rpx;
+  text-align: center;
 }
 
 .page__title {
-    text-align: center;
-    font-size: 36rpx;
-    font-weight: 400;
+  text-align: center;
+  font-size: 36rpx;
+  font-weight: 400;
 }
 
 .page__desc {
-    margin-top: 6rpx;
-    color: #888888;
-    text-align: left;
-    font-size: 28rpx;
+  margin-top: 6rpx;
+  color: #888888;
+  text-align: left;
+  font-size: 28rpx;
 }
-.kind-list{
-  background-color: #F0F0F0;
+.chat-box__left {
+  padding-top: 20rpx;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+          align-items: center;
+  float: left;
 }
-.kind-list__item {
-  margin: 10px 0;
-  background-color: #FFFFFF;
-  border-radius: 2px;
-  overflow: hidden;
+.chat-box__right {
+  padding-top: 20rpx;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+          align-items: center;
+  float: right;
 }
-.kind-list__item:first-child {
-  margin-top: 0;
+.chat-box__hd {
+  margin-right: 20rpx;
+  margin-left: 20rpx;
+  width: 120rpx;
+  line-height: 120rpx;
+  text-align: center;
 }
-.kind-list__img {
-  width: 30px;
-  height: 30px;
+.chat-box__bd {
+  width: 600rpx;
+  line-height: 120rpx;
+  text-align: left;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+          flex: 1;
 }
-.kind-list__item-hd {
-  padding: 20px;
-  -webkit-transition: opacity .3s;
-  transition: opacity .3s;
+
+.modal_box {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+   color: #fff;
+  background-color: #8FB0D1;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  z-index: 600;
+  filter: alpha(opacity=40);
 }
-.kind-list__item-hd_show {
-  opacity: .4;
+
+.modal_attr_box {
+  width: 100%;
+  overflow: scroll;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 700;
+  background: silver;
 }
-.kind-list__item-bd {
-  height: 0;
-  overflow: hidden;
+
+.close_icon {
+  width: 25rpx;
+  height: 25rpx;
+  line-height: 20rpx;
+  font-size: 30rpx;
+  position: absolute;
+  right: 5rpx;
+  top:5rpx;
+  padding: 10rpx;
+  color: red;
+  border: 1rpx solid #ccc;
+  border-radius: 50%;
+  text-align: center;
+  background: #fff;
 }
-.kind-list__item-bd_show {
-  height: auto;
+
+.drawer_attr_content {
+  color: #232626;
+	font-size: 32rpx;
+	background-color: #f9f9f9;
 }
