--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -141,10 +141,8 @@
   </view>
 </template>
 
-<template name="i_ed">
-  <navigator url="/inputedit/import/addressedit?reqName={{gname}}">
-    <view class="weui-cell">{{p}}:{{c.sName}}</view>
-  </navigator>
+<template name="i_modalEditAddress">
+  <view id="modalEditAddress" data-n="{{n}}" class="weui-cell" bindtap='i_modalEditAddress'>{{p}}:{{c.sName}}</view>
 </template>
 
 <template name="i_eDetail">
@@ -319,7 +317,7 @@
 <template name="i_sObject">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_objsel">{{ c ? slave[c].uName : slave[objarr[osv[0]].slaveId[osv[1]]].uName }}</view>
+    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_objsel">{{slave[c ? c : objarr[osv[0]].slaveId[osv[1]]].uName}} </view>
     <view hidden="{{inclose}}" class="weui-cell__ft">
       <button id="ac-{{n}}" data-ca="{{objarr[osv[0]].slaveId[osv[1]]}}" bindtap="f_objsel" size="mini">确定</button>
     </view>
@@ -327,10 +325,10 @@
   <view hidden="{{inclose}}" class="weui-picker">
     <picker-view id="pa-{{n}}" class="weui-picker__view"  indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{osv}}" bindchange="f_objsel">
       <picker-view-column>
-        <view wx:for="{{objarr}}" wx:key="{{index}}" style="line-height: 36rpx">{{master[item.masterId].uName}}</view>
+          <view wx:for="{{objarr}}" wx:key="{{index}}" style="line-height: 36rpx">{{master[item.masterId].uName}}</view>
       </picker-view-column>
       <picker-view-column>
-        <view wx:for="{{objarr[osv[0]].slaveId}}" wx:key="{{index}}" style="line-height: 36rpx">{{slave[item].uName}}</view>
+          <view wx:for="{{objarr[osv[0]].slaveId}}" wx:key="{{index}}" style="line-height: 36rpx">{{slave[item].uName}}</view>
       </picker-view-column>
     </picker-view>
   </view>
