--- a/libs/weui.wxss
+++ b/libs/weui.wxss
@@ -395,9 +395,8 @@ icon {
   margin-bottom: 1.5em;
 }
 .article-scroll {
-    height:1000rpx;
-    color:black;
-    /*background-color: lightblue;*/
+  height:300rpx;
+  color:black;
 }
 .weui-article__h1 {
   font-size: 36rpx;
@@ -434,11 +433,9 @@ icon {
   margin: 0 0 .2em;
 }
 .weui-article__-2 {
-  /* padding-top: 12rpx; */
   color: #236B8E;
   font-size: 24rpx;
   text-align: center;
-  /* margin: 0 0; .3em; */
 }
 .weui-article__-3 {
   font-size: 24rpx;
@@ -509,9 +506,9 @@ icon {
   }
 }
 .weui-flex {
-  display: -webkit-box;
-  display: -webkit-flex;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .weui-flex__item {
   -webkit-box-flex: 1;
@@ -519,10 +516,13 @@ icon {
           flex: 1;
 }
 .weui-btn {
-  margin-top: 30rpx;
+  margin-top: 12rpx;
+  line-height: 52rpx;
+  font-size: 30rpx;
+  display:inline-block;
 }
 .weui-btn:first-child {
-  margin-top: 0;
+  margin-top: 12rpx;
 }
 .weui-btn-area {
   margin: 1.17647059em 30rpx 0.3em;
@@ -564,13 +564,16 @@ icon {
   text-align: center;
 }
 .weui-footer_fixed-bottom {
+  position: absolute;
   z-index:998;
-  position: fixed;
   background-color: rgba(109, 109, 109, 1);
   background-size: 100%;
   bottom: 0;
   left: 0;
   right: 0;
+  display: flex;
+	flex-direction: row;
+	justify-content: space-around;
 }
 .weui-footer__links {
   font-size: 0;
@@ -604,8 +607,7 @@ icon {
   font-size: 24rpx;
 }
 .weui-grids {
-  border-top: 1rpx solid #D9D9D9;
-  border-left: 1rpx solid #D9D9D9;
+  text-align: center;
   overflow: hidden;
 }
 .weui-grid {
@@ -614,8 +616,9 @@ icon {
   padding: 6rpx 2rpx;
   width: 20%;
   box-sizing: border-box;
-  border-right: 1rpx solid #D9D9D9;
-  border-bottom: 1rpx solid #D9D9D9;
+  border: 1rpx solid #D9D9D9;
+  /* border-right: 1rpx solid #D9D9D9;
+  border-bottom: 1rpx solid #D9D9D9; */
 }
 .weui-grid_active {
   background-color: #ECECEC;
@@ -704,6 +707,7 @@ icon {
 .weui-panel__hd:after {
   content: " ";
   position: absolute;
+  left: 0;
   bottom: 0;
   right: 0;
   height: 2rpx;
@@ -718,6 +722,7 @@ icon {
 .weui-media-box:before {
   content: " ";
   position: absolute;
+  left: 0;
   top: 0;
   right: 0;
   height: 2rpx;
@@ -826,9 +831,10 @@ icon {
   display: -webkit-flex;
   display: flex;
   position: absolute;
-  z-index: 500;
-  top: 0;
+  top:0;
   width: 100%;
+  height: 100rpx;
+  background-color: #F5F5F5;
   border-bottom: 1rpx solid #CCCCCC;
 }
 .weui-navbar__item {
@@ -841,7 +847,7 @@ icon {
   text-align: center;
   font-size: 0;
 }
-.weui-navbar__item.weui-bar__item_on {
+.weui-bar__item_on {
   color: #1AAD19;
 }
 .weui-navbar__slider {
@@ -857,8 +863,9 @@ icon {
   -webkit-transition: -webkit-transform .3s;
   transition: -webkit-transform .3s;
   transition: transform .3s;
-  /*transition: transform .3s, -webkit-transform .3s;*/
+  transition: transform .3s, -webkit-transform .3s;
 }
+
 .weui-navbar__title {
   display: inline-block;
   font-size: 30rpx;
@@ -1002,6 +1009,8 @@ icon {
 
 .weui-picker{
   width:100%;
+  left:0;
+  bottom:0;
   background: #F5F5F5;
   border: 4rpx solid #ccc;
   border-radius: 10rpx;
@@ -1048,7 +1057,7 @@ icon {
 }
 .weui-picker__view{
   width:100%;
-  height:500rpx;
+  height:380rpx;
 }
 .weui-picker__mask{
   position:absolute;
@@ -1057,6 +1066,7 @@ icon {
   width:100%;
   height:100%;
   margin:0 auto;
+  z-index:3;
   background:-webkit-linear-gradient(top, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6)), -webkit-linear-gradient(bottom, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6));
   background:linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6)), linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6));
   background-position:top, bottom;
@@ -1071,6 +1081,7 @@ icon {
   position:absolute;
   left:0;
   top:200rpx;
+  z-index:3;
 }
 .weui-picker__indicator:before{
   content:" ";
