--- a/inputedit/f_Role/f_Role.wxml
+++ b/inputedit/f_Role/f_Role.wxml
@@ -1,17 +1,21 @@
 <import src="../import/impedit.wxml" />
+<import src="../../libs/wepage.wxml" />
 <view class="page" id="approval-{{pNo}}">
-  <form bindsubmit="fSubmit">
-    <view class="page__bd page__bd_spacing" id="{{targetId}}">
-      <view class="kind-list">
+  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
+  <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
+    <form bindsubmit="fSubmit">
+      <view class="page__bd_spacing" id="{{targetId}}">
         <block wx:for="{{reqData}}" wx:key="index">
-          <view class="kind-list__item">
-            <template is="i_{{item.t}}" data="{{...item,n:index,c:vData[item.gname]}}"></template>
-          </view>
+          <template is="i_{{item.t}}" data="{{...item,c:vData[item.gname],n:index}}"></template>
         </block>
       </view>
-    </view>
-    <view hidden="{{unEdit}}" class="page__ft" id="{{dObjectId}}">
-      <button class="weui-btn" id="fSave" formType="submit">提交</button>
-    </view>
-  </form>
+      <view style="padding-bottom:100rpx;"></view>
+      <view hidden="{{unEdit}}" class="page__ft weui-footer_fixed-bottom" id="{{dObjectId}}">
+        <button class="weui-btn" id="fSave" formType="submit">提交</button>
+      </view>
+    </form>
+  </view>
+  <view wx:else>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,reqData}}"/>
+  </view>
 </view>
