--- a/pages/signup/signup.wxml
+++ b/pages/signup/signup.wxml
@@ -1,3 +1,5 @@
+<import src="../../libs/weimport.wxml" />
+<template is="navBarReturn" data="{{navBarTitle,rtUrl}}"/>
 <wxs src="signmsg.wxs" module="tk" />
 <view class="page">
   <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
