--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -136,8 +136,10 @@
 
 <template name="i_chooseAd">
   <view id="ac-{{n}}" bindtap="i_chooseAd">
-  <view class="weui-label">{{p}}:</view>
-    <map longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="18" show-location style="width: 100%; height: 300px;"></map>
+    <view class="weui-label">{{p}}:</view>
+    <view class="weui-map-box">
+      <map id="chooseAd" longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="18" show-location></map>
+    </view>
   </view>
 </template>
 
