--- a/index/addresslist/addresslist.wxml
+++ b/index/addresslist/addresslist.wxml
@@ -1,4 +1,7 @@
 <import src="../../libs/wedetail.wxml"/>
+<import src="../../libs/wepage.wxml" />
+<view class="page">
+  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
 <view class="page">
   <block wx:for="{{vData}}" wx:key="{{index}}" wx:for-item="uu" wx:for-index="i">
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{uu.objectId}}" bindtap="indexClick">
