--- a/index/structure/structure.wxml
+++ b/index/structure/structure.wxml
@@ -1,4 +1,7 @@
+<import src="../../libs/wepage.wxml" />
 <view class="page">
+  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
+  <view class="page__sub">
   <view class="page__hd">
     <view class="page__title"> 岗位选择</view>
   </view>
