--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -1,13 +1,17 @@
 <import src="../../libs/weimport.wxml" />
+<import src="../../libs/wepage.wxml" />
 <view class="page">
-  <view class="page__bd page__ac_spacing">
+  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
+  <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
     <block wx:for="{{reqData}}" wx:key="index">
       <template is="s_{{item.t}}" data="{{...item, c:vData[item.gname]}}"></template>
     </block>
+    <view wx:if="{{uEV}}" class="page__ft weui-footer_fixed-bottom">
+      <button wx:if="{{enUpdate}}" class="weui-btn" style="display:inline-block" type="primary" size="mini" id="fModify" bindtap="fEditProcedure">修改并重新审批</button>
+      <button class="weui-btn" style="display:inline-block" type="primary" size="mini" id="fTemplate" bindtap="fEditProcedure">以此为模板新建</button>
+    </view>
   </view>
-
-  <view wx:if="{{uEV}}" class="page__ft weui-footer_fixed-bottom">
-    <button wx:if="{{enUpdate}}" class="weui-btn" style="display:inline-block" type="primary" size="mini" id="fModify" bindtap="fEditProcedure">修改并重新审批</button>
-    <button class="weui-btn" style="display:inline-block" type="primary" size="mini" id="fTemplate" bindtap="fEditProcedure">以此为模板新建</button>
+  <view wx:else>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,reqData}}"/>
   </view>
 </view>
