--- a/inputedit/distributor/distributor.wxml
+++ b/inputedit/distributor/distributor.wxml
@@ -1,14 +1,26 @@
 <import src="../import/impedit.wxml" />
-<view class="page" id="approval-{{pNo}}">
-  <form bindsubmit="fSave">
-    <view class="page__bd_spacing" id="{{targetId}}">
-      <block wx:for="{{reqData}}" wx:key="index">
-        <template is="i_{{item.t}}" data="{{...item,c:vData[item.gname],n:index}}"></template>
+<view class="page">
+  <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
+  <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
+    <view class="weui-tab__panel">
+      <block wx:for="{{cPage[ht.pageCk]}}" wx:key="{{index}}">
+        <view class="weui-media-box weui-media-box_appmsg" id="{{item}}" hover="true" hover-class="weui-cell_active" bindtap="f_modalRecordView">
+          <view class="weui-media-box__hd_in-appmsg">
+            <image class="weui-media-box__thumb" src="{{pageData[item].shopLogo}}" background-size="cover"></image>
+          </view>
+          <view class="weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">{{pageData[item].shopName}}</view>
+            <view class="weui-media-box__desc">{{pageData[item].address}}</view>
+          </view>
+        </view>
       </block>
     </view>
-
-    <view class="page__ft weui-footer_fixed-bottom" style="z-index:998;flex-direction:row;" id="{{vData.objectId}}">
-      <button class="weui-btn" type="primary" size="mini" formType="submit">提交</button>
+    <view style="padding-bottom:100rpx;"></view>
+    <view class="page__ft weui-footer_fixed-bottom">
+      <navigator open-type="navigateBack" delta="1">退出</navigator>
     </view>
-  </form>
+  </view>
+  <view wx:else>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,reqData}}"/>
+  </view>
 </view>
