--- a/inputedit/distributor/distributor.wxml
+++ b/inputedit/distributor/distributor.wxml
@@ -1,4 +1,5 @@
 <import src="../import/impedit.wxml" />
+<import src="../../libs/wepage.wxml" />
 <view class="page">
   <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
   <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
