--- a/inputedit/packing/packing.wxml
+++ b/inputedit/packing/packing.wxml
@@ -1,4 +1,6 @@
-<view class="container">
+<import src="../../libs/wepage.wxml" />
+<view class="page">
+  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
     <view class="list">
         <button type="primary" class="button" bindtap="simpleUpload">简单上传</button>
     </view>
