--- a/inputedit/myshare/myshare.wxml
+++ b/inputedit/myshare/myshare.wxml
@@ -1,17 +1,27 @@
-<import src="../import/impedit.wxml" />
-<view class="page" id="approval-{{pNo}}">
-  <form bindsubmit="fSubmit">
-    <view class="page__bd page__bd_spacing" id="{{targetId}}">
-      <view class="kind-list">
-        <block wx:for="{{reqData}}" wx:key="index">
-          <view class="kind-list__item">
-            <template is="i_{{item.t}}" data="{{...item,n:index,c:vData[item.gname]}}"></template>
+<import src="../../libs/wepage.wxml" />
+<view class="page">
+  <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
+  <view wx:if="{{sPages.length,2}}" class="page__sub" id="model-{{pNo}}">
+    <view class="weui-tab__panel">
+      <block wx:for="{{cPage[ht.pageCk]}}" wx:key="{{index}}">
+        <view class="weui-media-box weui-media-box_appmsg" id="{{item}}" data-pname="modalSwitchBox" hover="true" hover-class="weui-cell_active" bindtap="f_modalSwitchBox">
+          <view class="weui-media-box__hd_in-appmsg">
+            <image class="weui-media-box__thumb" src="{{pageData[item].thumbnail}}" background-size="cover"></image>
           </view>
-        </block>
-      </view>
+          <view class="weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">{{pageData[item].uName}}</view>
+            <view class="weui-media-box__desc">{{pageData[item].title}}</view>
+          </view>
+        </view>
+      </block>
     </view>
-    <view hidden="{{unEdit}}" class="page__ft" id="{{dObjectId}}">
-      <button class="weui-btn" id="fSave" formType="submit">提交</button>
+    <view style="padding-bottom:100rpx;"></view>
+    <view class="page__ft weui-footer_fixed-bottom">
+      <button class="weui-btn" type="warn" bindtap="fRegisterShare" id="fSave">注册</button>
+      <button class="weui-btn" type="primary" bindtap="fRegisterShare" id="fBack">返回</button>
     </view>
-  </form>
+  </view>
+  <view wx:else>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{showModalBox,animationData,tPage:cPage[ht.pageCk], pageData,reqData,...sPages[sPages.length-1]}}"/>
+  </view>
 </view>
