--- a/index/sOrder/sOrder.wxml
+++ b/index/sOrder/sOrder.wxml
@@ -1,17 +1,34 @@
-<import src="../import/impedit.wxml" />
-<view class="page" id="approval-{{pNo}}">
-  <form bindsubmit="fSubmit">
-    <view class="page__bd page__bd_spacing" id="{{targetId}}">
-      <view class="kind-list">
-        <block wx:for="{{reqData}}" wx:key="index">
-          <view class="kind-list__item">
-            <template is="i_{{item.t}}" data="{{...item,n:index,c:vData[item.gname]}}"></template>
+<import src="../../libs/wepage.wxml" />
+<view class="page">
+  <template is="p_navBar__headTab" data="{{...pw}}"/>
+  <view wx:if="{{sPages.length<2}}" class="page__sub" id="model-{{pNo}}">
+    <view id="masterGroup" class="weui-grids">
+        <view wx:for="{{droneId}}" wx:key="{{index}}" wx:for-index="mNo">
+          <view class="weui-grid" hover-class="weui-grid_active" id="{{mNo}}" bindtap="f_pickMaster">
+            <image class="weui-grid__icon" src="{{master[item.masterId].thumbnail}}" />
+            <view class="weui-grid__label">{{master[item.masterId].uName}}</view>
           </view>
-        </block>
+        </view>
+    </view>
+    <view wx:if="{{pMasterNo>=0}}">
+      <template is="s_h3" data="{{ p: master[droneId[pMasterNo].masterId].uName , c:master[droneId[pMasterNo].masterId].title }}"/>
+      <view id="slaveGroup" class="weui-grids">
+        <view wx:for="{{droneId[pMasterNo].slaveId}}" wx:key="{{index}}" wx:for-item="slaveId">
+          <view class="weui-grid" hover-class="weui-grid_active" id="{{slaveId}}" bindtap="f_pickSlave">
+            <image class="weui-grid__icon" src="{{slave[slaveId].thumbnail}}" />
+            <view class="weui-grid__label">{{slave[slaveId].uName}}</view>
+          </view>
+        </view>
       </view>
     </view>
-    <view hidden="{{unEdit}}" class="page__ft" id="{{dObjectId}}">
-      <button class="weui-btn" id="fSave" formType="submit">提交</button>
+    <view wx:for="{{droneId[pMasterNo].slaveId}}" wx:key="{{index}}" wx:for-item="sForId">
+      <view wx:if="{{sharePage[sForId]}}">
+        <template is="s_h3" data="{{ p: slave[sForId].uName , c:slave[sForId].title }}"/>
+        <template is="tabPanel" data="{{ tPage: sharePage[sForId] , pageData , pNo }}"/>
+      </view>
     </view>
-  </form>
+  </view>
+  <view wx:else>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{showModalBox,animationData,tPage:cPage[ht.pageCk], pageData,reqData,...sPages[sPages.length-1]}}"/>
+  </view>
 </view>
