--- a/inputedit/myshare/myshare.wxml
+++ b/inputedit/myshare/myshare.wxml
@@ -1,7 +1,7 @@
 <import src="../../libs/wepage.wxml" />
 <view class="page">
   <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
-  <view wx:if="{{sPages.length,2}}" class="page__sub" id="model-{{pNo}}">
+  <view wx:if="{{sPages.length<2}}" class="page__sub" id="model-{{pNo}}">
     <view class="weui-tab__panel">
       <block wx:for="{{cPage[ht.pageCk]}}" wx:key="{{index}}">
         <view class="weui-media-box weui-media-box_appmsg" id="{{item}}" data-pname="modalSwitchBox" hover="true" hover-class="weui-cell_active" bindtap="f_modalSwitchBox">
