--- a/inputedit/adjustment/adjustment.wxml
+++ b/inputedit/adjustment/adjustment.wxml
@@ -22,6 +22,6 @@
     </view>
   </view>
   <view wx:else>
-    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,reqData}}"/>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,iFormat}}"/>
   </view>
 </view>
