--- a/inputedit/fprocedure/fprocedure.wxml
+++ b/inputedit/fprocedure/fprocedure.wxml
@@ -5,7 +5,7 @@
   <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
     <form bindsubmit="fSubmit">
       <view class="page__bd_spacing" id="{{targetId}}">
-        <block wx:for="{{reqData}}" wx:key="index">
+        <block wx:for="{{iFormat}}" wx:key="index">
           <template is="i_{{item.t}}" data="{{...item,c:vData[item.gname],n:index}}"></template>
         </block>
       </view>
@@ -23,6 +23,6 @@
     </view>
   </view>
   <view wx:else>
-    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,reqData}}"/>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,iFormat}}"/>
   </view>
 </view>
