--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -3,7 +3,7 @@
 <view class="page">
   <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
   <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
-    <block wx:for="{{reqData}}" wx:key="index">
+    <block wx:for="{{vFormat}}" wx:key="index">
       <template is="s_{{item.t}}" data="{{...item, c:vData[item.gname]}}"></template>
     </block>
     <view wx:if="{{uEV}}" class="page__ft weui-footer_fixed-bottom">
@@ -12,6 +12,6 @@
     </view>
   </view>
   <view wx:else>
-    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,reqData}}"/>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,iFormat}}"/>
   </view>
 </view>
