--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -41,6 +41,20 @@
   </view>
 </template>
 
+<template name="s_content">
+  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
+  <view class="weui-cell">
+    <view class="weui-cell__hd">材料(包装)</view>
+    <view class="weui-cell__bd">内含数量</view>
+    <view class="weui-cell__ft">单位</view>
+  </view>
+  <view class="weui-cell" wx:for="{{c}}" wx:key="index">
+    <view class="weui-cell__hd">{{item.material}}</view>
+    <view class="weui-cell__bd">{{item.dOutput}}</view>
+    <view class="weui-cell__ft">{{item.dUnit}}</view>
+  </view>
+</template>
+
 <template name="s_sObject">
   <view class="weui-cell">{{p}}:</view>
   <view class="weui-cell" id="{{c}}" data-pNo="{{gname}}" bingtap="f_modalFieldView">
