--- a/inputedit/f_Role/f_Role.wxml
+++ b/inputedit/f_Role/f_Role.wxml
@@ -2,7 +2,7 @@
 <import src="../../libs/wepage.wxml" />
 <view class="page" id="approval-{{pNo}}">
   <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
-  <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
+  <view hidden="{{sPages.length!==1}}" class="page__sub" id="model-{{pNo}}">
     <form bindsubmit="fSubmit">
       <view class="page__bd_spacing" id="{{targetId}}">
         <block wx:for="{{iFormat}}" wx:key="index">
@@ -15,7 +15,7 @@
       </view>
     </form>
   </view>
-  <view wx:else>
+  <view wx:if="{{sPages.length>1}}">
     <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{...sPages[sPages.length-1],showModalBox,animationData,vData,pageData,iFormat}}"/>
   </view>
 </view>
