--- a/pages/signup/signup.wxml
+++ b/pages/signup/signup.wxml
@@ -15,7 +15,7 @@
 
   <view class="weui-cells weui-cells_after-title">
     <form bindsubmit="i_Name">
-    <view class="weui-cell weui-cell_input">
+    <view class="weui-cell weui-cell_input" style="font-size: 32rpx;">
       <view class="weui-cell__hd">
         <view class="weui-label">真实姓名:</view>
       </view>
@@ -28,59 +28,35 @@
     </view>
     </form>
   </view>
-  <view id="0" class="weui-cells" hover="true" hover-class="weui-hover" hover-stay-time="500" bindtap="editenable">
-    <icon class="weui-icon" type="{{user.mobilePhoneVerified ? 'success' : 'warn'}}"/> 验证手机号{{user.mobilePhoneVerified ? '（可修改绑定手机号）' : '（无绑定手机号）'}}
-  </view>
-  <view class="weui-cells" hidden="{{ activeIndex != 0 }}">
-    <scroll-view scroll-y="true" style="height:{{sysheight}}rpx;text-indent:2em" hover="true" hover-class="weui-hover" hover-stay-time="500">
-      <text>{{tk.tk}}</text>
-    </scroll-view>
-    <view class="weui-cell_switch"> <switch type="checkbox" checked="{{swcheck}}" bindchange="fswcheck"/>阅读并同意《电子商务服务平台使用条款》</view>
-    <view hidden="{{!swcheck}}">
-      <button open-type="getPhoneNumber" bindgetphonenumber="gUserPhoneNumber">允许使用微信手机号</button>
-      <form wx:if="{{rejectWxPhone}}" bindsubmit="getvcode">
-        <view class="weui-cell weui-cell_input weui-cell_vcode">
-          <view class="weui-cell__hd">
-            <view class="weui-label">手机号</view>
-          </view>
-          <view class="weui-cell__bd">
-            <input maxlength="11" name="inputmpn" value="{{phonen}}" placeholder="请输入手机号" />
-          </view>
-          <view class="weui-cell__ft">
-            <button class="weui-btn" formType="submit">获取验证码</button>
-          </view>
-        </view>
-      </form>
-      <form wx:if="{{rejectWxPhone}}" bindsubmit="fpvcode">
-        <view class="weui-cell weui-cell_input weui-cell_vcode">
-          <view class="weui-cell__hd">
-            <view class="weui-label">验证码</view>
-          </view>
-          <view class="weui-cell__bd">
-            <input maxlength="6" name="inputvc" value="{{vcoden}}" placeholder="请输入验证码" />
-          </view>
-          <view class="weui-cell__ft">
-            <button class="weui-btn" formType="submit">验   证</button>
-          </view>
-        </view>
-      </form>
-    </view>
-  </view>
 
-  <view id="1" class="weui-cells" bindtap="editenable">
-      <icon class="weui-icon" type="{{user.mobilePhoneVerified ? 'info' : 'waiting'}}"/>{{cUnitInfo}}
-  </view>
-  <view class="weui-cells" hidden="{{ (activeIndex != 1) && (user.unit) }}">
+  <view wx:if="{{user.mobilePhoneVerified}}">
+    <view class="weui-cells">
+      <icon class="weui-icon" type="info"/>{{cUnitInfo}}
+    </view>
     <form bindsubmit="makeunit">
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__hd">
-            <view class="weui-label">单位名称:</view>
+          <view class="weui-label">单位名称:</view>
         </view>
         <view class="weui-cell__bd">
           <input name="unitName" value="{{uName}}" class="weui-input" placeholder="请输入单位名称" />
         </view>
       </view>
-      <button hidden="{{user.emailVerified}}" class="weui-btn" formType="submit">查询单位(存在可申请加入、不存在可创建)</button>
+      <view class="weui-cell">
+        <button class="weui-btn" type="warn" formType="submit">查询单位(存在可申请加入、不存在可创建)</button>
+      </view>
     </form>
   </view>
+  <view wx:else>
+    <view class="weui-cells">
+      <scroll-view scroll-y="true" style="height:{{sysheight}}rpx;text-indent:2em" hover="true" hover-class="weui-hover" hover-stay-time="500">
+        <text>{{tk.tk}}</text>
+      </scroll-view>
+      <view class="weui-cell_switch"> <switch type="checkbox" checked="{{swcheck}}" bindchange="fswcheck"/>阅读并同意《电子商务服务平台使用条款》</view>
+      <view hidden="{{!swcheck}}">
+        <button open-type="getPhoneNumber" bindgetphonenumber="gUserPhoneNumber">使用微信手机号注册成为本平台用户</button>
+      </view>
+    </view>
+  </view>
+
 </view>
