--- a/index/structure/structure.wxml
+++ b/index/structure/structure.wxml
@@ -1,6 +1,6 @@
 <import src="../../libs/wepage.wxml" />
 <view class="page">
-  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
+  <template is="p_navBar__back" data="{{statusBar,navBarTitle}}"/>
   <view class="page__hd">
     <view class="page__title"> 岗位选择</view>
   </view>
