--- a/inputedit/distributor/distributor.wxml
+++ b/inputedit/distributor/distributor.wxml
@@ -1,7 +1,7 @@
 iFormat<import src="../import/impedit.wxml" />
 <import src="../../libs/wepage.wxml" />
 <view class="page">
-  <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
+  <template is="p_navBar__headTab" data="{{statusBar,...ht}}"/>
   <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
     <view class="weui-tab__panel">
       <block wx:for="{{cPage[ht.pageCk]}}" wx:key="{{index}}">
