--- a/inputedit/myshare/myshare.wxml
+++ b/inputedit/myshare/myshare.wxml
@@ -1,6 +1,6 @@
 <import src="../../libs/wepage.wxml" />
 <view class="page">
-  <template is="p_navBar__headTab" data="{{...pw,...ht}}"/>
+  <template is="p_navBar__headTab" data="{{statusBar,...ht}}"/>
   <view wx:if="{{sPages.length<2}}" class="page__sub" id="model-{{pNo}}">
     <view class="weui-tab__panel">
       <block wx:for="{{cPage[ht.pageCk]}}" wx:key="{{index}}">
