--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -1,7 +1,7 @@
 <import src="../../libs/weimport.wxml" />
 <import src="../../libs/wepage.wxml" />
 <view class="page">
-  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
+  <template is="p_navBar__back" data="{{statusBar,navBarTitle}}"/>
   <view wx:if="{{sPages.length==1}}" class="page__sub" id="model-{{pNo}}">
     <block wx:for="{{vFormat}}" wx:key="index">
       <template is="s_{{item.t}}" data="{{...item, c:vData[item.gname]}}"></template>
